Fix - Nav Bar Collapse

--- a/asstes/css/app.css
+++ b/asstes/css/app.css
@@ -1056,6 +1056,8 @@ _:-ms-lang(x),
 }
 .topnavbar .navbar-header .navbar-brand {
   padding: 0;
+  height: 63px;
+  background:#0f4871;
 }
 .topnavbar .navbar-header .brand-logo > img,
 .topnavbar .navbar-header .brand-logo-collapsed > img {
@@ -1283,6 +1285,8 @@ _:-ms-lang(x),
   }
   .aside-collapsed .topnavbar .navbar-header {
     width: 70px;
+    background: #0f4871;
+    height: 60px;
   }
   .aside-collapsed .topnavbar .navbar-form {
     left: 70px;
